# experiment-llm-refusal

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: full.yaml  smoke.yaml
scripts/: inspect_data.py
scripts/gcp/: create-vm.sh  run-eval.sh  run-training.sh  setup-vm.sh  startup.sh
src/safety_finetune/: config.py  data_utils.py  eval.py  train.py
tests/: test_config.py  test_data.py
