[build-system]
requires = ["setuptools==80.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-finetune"
version = "0.1.0"
description = "QLoRA fine-tuning Qwen2.5 for safety refusal on bio/chem questions"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.1",
    "transformers==4.56.2",
    "trl==0.23.1",
    "peft==0.16.0",
    "bitsandbytes==0.41.3.post2",
    "datasets==4.4.2",
    "accelerate==1.9.0",
    "pyyaml==6.0.2",
    "pandas==2.2.3",
    "scipy==1.13.1",
    "tensorboard==2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.14.14",
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
]
gcp = [
    "google-cloud-storage==3.8.0",
    "wandb==0.24.2",
]

[project.scripts]
sft-train = "safety_finetune.train:main"
sft-eval = "safety_finetune.eval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
